samples/_failures_safe/1761472227_7c5178_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d29628a.c: In function ‘main’:
./samples/SAFE/__tmp_0d29628a.c:148:9: error: expected declaration or statement at end of input
  148 |         printf("Matrix must be square\n");
      |         ^~~~~~
./samples/SAFE/__tmp_0d29628a.c:148:9: error: expected declaration or statement at end of input
